[gd_scene load_steps=19 format=3 uid="uid://v1ku1o5ma46j"]

[ext_resource type="Script" path="res://Scripts/Ball.gd" id="1_8v3iu"]
[ext_resource type="Texture2D" uid="uid://cmuwdke5npuqy" path="res://resources/golf.png" id="2_cr1wt"]
[ext_resource type="Script" path="res://Scripts/Components/Pulser.gd" id="3_t7ikm"]
[ext_resource type="Texture2D" uid="uid://dj1lrkal6yh80" path="res://resources/water-drop.png" id="9_r0dik"]
[ext_resource type="Texture2D" uid="uid://dg8vuckm2chsv" path="res://resources/particles.png" id="10_14x4h"]
[ext_resource type="Texture2D" uid="uid://de376upft1uvw" path="res://resources/bounce.png" id="11_ra2h2"]
[ext_resource type="Texture2D" uid="uid://b3cs1ex3xhu6r" path="res://resources/aimline.png" id="12_wli68"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_db07g"]
properties/0/path = NodePath(".:player_id")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:aim_color")
properties/1/spawn = true
properties/1/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_dkxsp"]
properties/0/path = NodePath(".:sync_pos")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:sync_aim_vis")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:sync_aim_scale")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:sync_aim_rot")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:sync_mod_a")
properties/4/spawn = true
properties/4/replication_mode = 2
properties/5/path = NodePath(".:sync_splash_emit")
properties/5/spawn = true
properties/5/replication_mode = 2
properties/6/path = NodePath(".:sync_scale")
properties/6/spawn = true
properties/6/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_jqxxf"]
radius = 2.0

[sub_resource type="Curve" id="Curve_a4e1w"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_ntepb"]
curve = SubResource("Curve_a4e1w")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8k5py"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
direction = Vector3(0, -10, 0)
spread = 30.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 0.75
alpha_curve = SubResource("CurveTexture_ntepb")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xcivj"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, 0, 0)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_2mxw6"]

[sub_resource type="Curve" id="Curve_fug38"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_xrsin"]
curve = SubResource("Curve_fug38")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ndypt"]
lifetime_randomness = 0.4
particle_flag_align_y = true
particle_flag_disable_z = true
angle_min = -90.0
angle_max = 90.0
direction = Vector3(0, -2, 0)
spread = 15.0
initial_velocity_min = 40.0
initial_velocity_max = 60.0
gravity = Vector3(0, 180, 0)
linear_accel_max = 46.93
scale_min = 0.15
scale_max = 0.35
scale_curve = SubResource("CurveTexture_xrsin")

[node name="Ball" type="CharacterBody2D" groups=["camera_targets"]]
y_sort_enabled = true
collision_layer = 16
collision_mask = 9
motion_mode = 1
slide_on_ceiling = false
wall_min_slide_angle = 0.0872665
safe_margin = 1.0
script = ExtResource("1_8v3iu")

[node name="PlayerIdSynchronizer" type="MultiplayerSynchronizer" parent="."]
unique_name_in_owner = true
replication_interval = 0.5
delta_interval = 0.5
replication_config = SubResource("SceneReplicationConfig_db07g")

[node name="DataSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.05
delta_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_dkxsp")

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
y_sort_enabled = true
texture = ExtResource("2_cr1wt")
region_enabled = true
region_rect = Rect2(165, 86, 6, 6)

[node name="AimLine" type="Sprite2D" parent="."]
unique_name_in_owner = true
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("12_wli68")
offset = Vector2(32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
y_sort_enabled = true
shape = SubResource("CircleShape2D_jqxxf")

[node name="Pulser" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = -1
script = ExtResource("3_t7ikm")
pause_between = 1

[node name="HitParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_8k5py")
texture = ExtResource("10_14x4h")
one_shot = true
explosiveness = 1.0

[node name="BounceParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 1
process_material = SubResource("ParticleProcessMaterial_xcivj")
texture = ExtResource("11_ra2h2")
lifetime = 0.13
one_shot = true

[node name="SplashParticles" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_2mxw6")
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_ndypt")
texture = ExtResource("9_r0dik")
one_shot = true
explosiveness = 1.0

[connection signal="entered_goal_proximity" from="." to="." method="_on_entered_goal_proximity"]
[connection signal="left_goal_proximity" from="." to="." method="_on_left_goal_proximity"]
